--- a/src/analysis_2.html
+++ b/src/analysis_2.html
@@ -166,7 +166,10 @@
                                 </div>
                                 <p class="analysis-detail__subtitle">Цена:</p>
                                 <div class="analysis-detail__buy-block">
-                                    <p class="analysis-detail__price">8 435 ₽</p>
+                                    <div class="analysis-detail__price-block">
+                                        <p class="analysis-detail__old-price">18 435 ₽</p>
+                                        <p class="analysis-detail__price">8 435 ₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                                 <p class="analysis-detail__subtitle">Цена указывается без учета стоимости<br> взятия биоматериала</p>
@@ -237,7 +240,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -248,7 +254,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -259,7 +268,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -270,7 +282,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -281,7 +296,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -292,7 +310,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -303,7 +324,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -314,7 +338,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -325,7 +352,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
