--- a/src/analyzes.html
+++ b/src/analyzes.html
@@ -316,7 +316,10 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__old-price">4540&nbsp;₽</p>
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -346,7 +349,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -376,7 +381,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -406,7 +413,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -436,7 +445,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -466,7 +477,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -496,7 +509,9 @@
                             </div>
                         </div>
                         <div class="analysis__buy-block">
-                            <p class="analysis__price">4800&nbsp;₽</p>
+                            <div class="analysis__price-block">
+                                <p class="analysis__price">4540&nbsp;₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                     </div>
@@ -547,7 +562,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -558,7 +576,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -569,7 +590,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -580,7 +604,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -591,7 +618,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -602,7 +632,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -613,7 +646,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -624,7 +660,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -635,7 +674,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
