--- a/src/analyzes_2.html
+++ b/src/analyzes_2.html
@@ -376,7 +376,10 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__old-price">4540&nbsp;₽</p>
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -406,7 +409,9 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -436,7 +441,10 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__old-price">4540&nbsp;₽</p>
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -466,7 +474,9 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -496,7 +506,10 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__old-price">4540&nbsp;₽</p>
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -526,7 +539,10 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__old-price">4540&nbsp;₽</p>
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -556,7 +572,9 @@
                                     </div>
                                 </div>
                                 <div class="analysis__buy-block">
-                                    <p class="analysis__price">4800&nbsp;₽</p>
+                                    <div class="analysis__price-block">
+                                        <p class="analysis__price">4540&nbsp;₽</p>
+                                    </div>
                                     <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                                 </div>
                             </div>
@@ -609,7 +627,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -620,7 +641,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -631,7 +655,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -642,7 +669,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -653,7 +683,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -664,7 +697,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -675,7 +711,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -686,7 +725,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -697,7 +739,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
