--- a/src/main.html
+++ b/src/main.html
@@ -253,7 +253,11 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
+
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -264,7 +268,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -275,7 +282,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -286,7 +295,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -297,7 +308,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -308,7 +321,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -319,7 +334,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -330,7 +347,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -341,7 +360,9 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
