--- a/src/personal_11.html
+++ b/src/personal_11.html
@@ -51,7 +51,10 @@
                             </colgroup>
                             <tr class="cart__item">
                                 <td><a href="#">Диагностика рака молочной железы.<br> Метаболиты эстрогенов.</a></td>
-                                <td class="cart__item-price">1800 ₽</td>
+                                <td class="cart__item-price">
+                                    <p class="cart__item-old-price">2100 ₽</p>
+                                    1800 ₽
+                                </td>
                                 <td>
                                     <button class="cart__item-delete" type="button" title="Удалить">
                                         <svg class="icon">
@@ -99,7 +102,10 @@
                 <div class="cart__results">
                     <p class="cart__results-row">
                         <span>Итого:</span>
-                        <span>11800&nbsp;₽</span>
+                        <span class="cart__results-price-block">
+                            <span class="cart__results-old-price">15800&nbsp;₽</span>
+                            11800&nbsp;₽
+                        </span>
                     </p>
                     <div class="cart__results-button-block">
                         <a class="button button--type_1 button--height_4" href="#">
