--- a/src/analysis.html
+++ b/src/analysis.html
@@ -69,7 +69,10 @@
                         </div>
                         <p class="analysis-detail__subtitle">Цена:</p>
                         <div class="analysis-detail__buy-block">
-                            <p class="analysis-detail__price">8 435 ₽</p>
+                            <div class="analysis-detail__price-block">
+                                <p class="analysis-detail__old-price">18 435 ₽</p>
+                                <p class="analysis-detail__price">8 435 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_4" href="#">В корзину</a>
                         </div>
                         <p class="analysis-detail__subtitle">Цена указывается без учета стоимости<br> взятия биоматериала</p>
@@ -139,7 +142,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -150,7 +156,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -161,7 +170,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -172,7 +184,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -183,7 +198,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -194,7 +212,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -205,7 +226,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -216,7 +240,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
@@ -227,7 +254,10 @@
                         <p class="complex__subtitle"><a href="#">Биохимия крови:<br> расширенный профиль</a></p>
                         <p class="complex__time">1 рабочий день</p>
                         <div class="complex__buy-block">
-                            <p class="complex__price">4540 ₽</p>
+                            <div class="complex__price-block">
+                                <p class="complex__old-price">5240 ₽</p>
+                                <p class="complex__price">4540 ₽</p>
+                            </div>
                             <a class="button button--type_1 button--height_1" href="#">В корзину</a>
                         </div>
                     </div>
