--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,8 @@
         <li><a href="partners.html" target="_blank">Партнеры</a></li>
 
         <li><a href="text.html" target="_blank">Текстовая</a></li>
+
+        <li><a href="forms.html" target="_blank">Формы</a></li>
     </ol>
 </body>
 
